--- a/gb/17/3/7/n8884384.md
+++ b/gb/17/3/7/n8884384.md
@@ -1,12 +1,12 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/wm2843/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/wm2843/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/wm2843/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/wm2843/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/wm2843/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/wm2843/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/wm2843/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/wm2843/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/wm2843/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/wm2843/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/wm2843/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/wm2843/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/wm2843/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/wm2843/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/wm2843/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/wm2843/www/master/t/djy/9.jpg" title="健康"><a href="https://www.youlucky.com"><img src="https://raw.githubusercontent.com/wm2843/www/master/t/djy/10.jpg" title="购物"></a><a href="https://donate.epochtimes.com/?utm_medium=epochtimes&utm_source=referral&utm_campaign=donate_button_djyarticleheader"><img src="https://raw.githubusercontent.com/wm2843/www/master/t/djy/12.jpg" title="捐款"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/wm2843/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/wm2843/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/wm2843/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/wm2843/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/wm2843/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/wm2843/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/wm2843/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/wm2843/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/wm2843/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/wm2843/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/wm2843/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/wm2843/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/wm2843/www/blob/master/README.md?zsrh#8">翻墙</a></p><p><a target="_blank" href="https://github.com/wm2843/djy/blob/master/gb/nf5562.md#1">伪火</a> | <a target="_blank" href="https://github.com/wm2843/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/wm2843/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/wm2843/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/wm2843/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/wm2843/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/wm2843/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/wm2843/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/wm2843/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/wm2843/ntdtv/blob/master/gb/prog1530_1.md#1">和平抗议</a> | <a target="_blank" href="https://github.com/wm2843/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/wm2843/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/wm2843/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/wm2843/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/eizauy3553/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/eizauy3553/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/eizauy3553/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/eizauy3553/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>2017年联邦预算提早看 会对你有什么影响？</h2>
 <img width="600" src="https://i.epochtimes.com/assets/uploads/2010/02/1002231546341814-600x400.jpg" />
 <h6>图：加拿大国会3月4日复会，2010年政府预算将出台，新预算预计不会增加税收，但开支会收紧（摄影：余天祐/大纪元）
 </h6>
 <hr>
-<p>【大纪元2017年03月07日讯】（大纪元记者周行综合多伦多报导）加拿大联邦财长莫纽（Bill Morneau）周二（3月7日）宣布，将于3月22日公布今年的<ahref="https://github.com/wm2843/djy/blob/master/gb/tag/%E8%81%94%E9%82%A6%E9%A2%84%E7%AE%97.md#1">联邦预算</a>。政府正面临资金缺乏及美国政策可能带来的影响，估计新预算不会有什么惊喜。</p>
+<p>【大纪元2017年03月07日讯】（大纪元记者周行综合多伦多报导）加拿大联邦财长莫纽（Bill Morneau）周二（3月7日）宣布，将于3月22日公布今年的<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E8%81%94%E9%82%A6%E9%A2%84%E7%AE%97.md#1">联邦预算</a>。政府正面临资金缺乏及美国政策可能带来的影响，估计新预算不会有什么惊喜。</p>
 <p>自由党政府的第二个预算将不会有什么新的开支计划，面对美国总统川普还没出台的经济计划，加拿大财长莫纽采取了等着看的姿态。据CBC报导，一名不透露姓名的资深政府官员称，这预算会为2年的预算设定一个基础，能够适应美国预算可能带来的影响。</p>
 <p>业界期望新预算会解释政府去年预算已经宣布、但未说明的一些细节，包括每年投资2亿元、为期4年的创新网络和集群（innovation networks and clusters）计划。去年宣布的这个计划，到目前为止还没有花一分钱，2017年的预算将详细说明一些资金将如何使用。另外，去年宣布的10年投资1,860亿元于基础设施的计划，也会有更多细节公布。</p>
 <h3>川普承诺下调税率 特鲁多政府不敢加税</h3>
@@ -16,8 +16,8 @@
 <p>政府内部人士传出消息，川普承诺大幅度降低个人和企业税，以及向基础设施投入万亿美元的政策，是加拿大政府采取谨慎做法的一个关键因素。但财政部官员也担心加拿大经济的低增长及全球经济持续不确定带来的负面风险。</p>
 <h3>难找到更多资金帮助中产阶层</h3>
 <p>自由党去年开始帮助中产阶层的政策，收入在45,282元至90,563的个人，收入税率从22%降至20.5%。代价是年收入20万以上的人，增设一个33%的税率，就是向最高收入的人加税，来补贴向中产阶层的减税。</p>
-<p>不过，联邦政府在2016年预算中的最大开支，还是加拿大<ahref="https://github.com/wm2843/djy/blob/master/gb/tag/%E5%84%BF%E7%AB%A5%E7%A6%8F%E5%88%A9.md#1">儿童福利</a>（Canada Child Benefit），该计划第一年耗资45亿加元。有行家做了计算，这笔开支比政府第一年花在原住民社区、公共安全、艺术和文化、公共交通基础设施及绿色基础设施的开支加起来还多。</p>
-<p>政府新设的这个<ahref="https://github.com/wm2843/djy/blob/master/gb/tag/%E5%84%BF%E7%AB%A5%E7%A6%8F%E5%88%A9.md#1">儿童福利</a>，比原来的儿童福利计划更关注<ahref="https://github.com/wm2843/djy/blob/master/gb/tag/%E4%BD%8E%E6%94%B6%E5%85%A5%E5%AE%B6%E5%BA%AD.md#1">低收入家庭</a>。同时，政府决定逐步取消儿童参加艺术、健身等计划的开销税收优惠。</p>
+<p>不过，联邦政府在2016年预算中的最大开支，还是加拿大<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E5%84%BF%E7%AB%A5%E7%A6%8F%E5%88%A9.md#1">儿童福利</a>（Canada Child Benefit），该计划第一年耗资45亿加元。有行家做了计算，这笔开支比政府第一年花在原住民社区、公共安全、艺术和文化、公共交通基础设施及绿色基础设施的开支加起来还多。</p>
+<p>政府新设的这个<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E5%84%BF%E7%AB%A5%E7%A6%8F%E5%88%A9.md#1">儿童福利</a>，比原来的儿童福利计划更关注<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E4%BD%8E%E6%94%B6%E5%85%A5%E5%AE%B6%E5%BA%AD.md#1">低收入家庭</a>。同时，政府决定逐步取消儿童参加艺术、健身等计划的开销税收优惠。</p>
 <p>联邦自由党2015年竞选时的重要承诺是要帮助中产阶层。现在政府面对第二个预算时，看起来已经很难找到资金去帮助中产阶层。</p>
 <p>威尔斯在其署名文章中称，对中产阶层的减税不多，看起来只能算是特鲁多兑现竞选承诺的“首期付款”。“但现在看来，这首付款可能要维持一段时间”。</p>
 <p>CBC报导的政府内部消息显示，由于政府去年决定向儿童福利计划及基础设施建设投入大量资金，今年能提供新开支的财政能力已明显不足。</p>
@@ -32,7 +32,7 @@
 <li>上届政府在2007年建立的儿童福利津贴已被取消，节省了每年16亿元的开支。</li>
 </ul>
 <h3>还有承诺等待兑现</h3>
-<p>自由党还有未兑现的竞选承诺，包括他们在第一个预算时，推迟兑现将<ahref="https://github.com/wm2843/djy/blob/master/gb/tag/%E5%B0%8F%E4%BC%81%E4%B8%9A%E7%9A%84%E4%BC%98%E6%83%A0%E7%A8%8E%E7%8E%87.md#1">小企业的优惠税率</a>从目前的10.5％降低到9％。对小企业第一个50万元收入，按较低的企业税率征税，已经使政府少了35亿元的收入，要兑现税率从10.5％降低到9％，政府付出的代价会更大。</p>
+<p>自由党还有未兑现的竞选承诺，包括他们在第一个预算时，推迟兑现将<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E5%B0%8F%E4%BC%81%E4%B8%9A%E7%9A%84%E4%BC%98%E6%83%A0%E7%A8%8E%E7%8E%87.md#1">小企业的优惠税率</a>从目前的10.5％降低到9％。对小企业第一个50万元收入，按较低的企业税率征税，已经使政府少了35亿元的收入，要兑现税率从10.5％降低到9％，政府付出的代价会更大。</p>
 <p>自由党的另一个承诺是给股票期权扣除（stock option deduction）加上限，理由是大约有四分之三的扣除都给了大约8,000名高收入的加拿大人，他们平均在应税收入中扣除了400,000元。自由党承诺的扣除上限是每年100,000元，但股票期权能帮助创业公司吸引和奖励人才。如果不加上限的话，这项税收优惠在2016年的成本是6.95亿元。</p>
 <p>在税收优惠裁减方面，财长的税务评估小组已有专家提到应取消精品（boutique）税收抵免。CBC提到的其它可能被考虑的税收优惠包括：养老金收入分流报税（成本12亿元）、公共交通税收抵免(1.9亿元)、加拿大就业税收抵免（23亿元）、技工工具开支税收抵免（200万元）、志愿消防队员税收抵免（1,500万元）、搜索及救援志愿者税收抵免（200万元）。</p>
 <p>责任编辑：文风</p>
@@ -41,42 +41,47 @@
 
 
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/wm2843/djy/blob/master/gb/15/4/22/n4417776.md#1">加拿大联邦预算 谁最受益？</a></li>
-<li><a href="https://github.com/wm2843/djy/blob/master/gb/15/4/25/n4419769.md#1">魁省回应加拿大联邦预算案</a></li>
-<li><a href="https://github.com/wm2843/djy/blob/master/gb/16/3/10/n4658814.md#1">观望联邦预算 加拿大央行维持利率不变</a></li>
-<li><a href="https://github.com/wm2843/djy/blob/master/gb/16/3/22/n4668285.md#1">联邦预算民调 七成加拿大人忧钱袋</a></li>
-<li><a href="https://github.com/wm2843/djy/blob/master/gb/16/6/2/n7958624.md#1">2016年加拿大联邦预算 哪类家庭最受益？</a></li>
-<li><a href="https://github.com/wm2843/djy/blob/master/gb/20/4/30/n12074002.md#1">加拿大政府5月发放福利多</a></li>
-<li><a href="https://github.com/wm2843/djy/blob/master/gb/20/4/30/n12073975.md#1">报告：加拿大联邦预算赤字或达2,521亿</a></li>
-<li><a href="https://github.com/wm2843/djy/blob/master/gb/20/4/30/n12073829.md#1">病毒流行期间 加拿大出台政策帮助留学生</a></li>
-<li><a href="https://github.com/wm2843/djy/blob/master/gb/20/5/1/n12073595.md#1">疫期获退数千信用卡保费 加拿大用户喜出望外</a></li>
-<li><a href="https://github.com/wm2843/djy/blob/master/gb/20/4/30/n12073545.md#1">辛素：有意混淆视听 CBC有必要说清楚</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/15/4/22/n4417776.md#1">加拿大联邦预算 谁最受益？</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/15/4/25/n4419769.md#1">魁省回应加拿大联邦预算案</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/16/3/10/n4658814.md#1">观望联邦预算 加拿大央行维持利率不变</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/16/3/22/n4668285.md#1">联邦预算民调 七成加拿大人忧钱袋</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/16/6/2/n7958624.md#1">2016年加拿大联邦预算 哪类家庭最受益？</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/28/n13679617.md#1">卑诗海岸天然气管道袭击案 40天后 案情无进展</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/28/n13679435.md#1">加拿大政府宣布将购买F-35战斗机</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/28/n13679517.md#1">36年夙愿 加拿大男足终获世界杯参赛资格</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/28/n13679539.md#1">许多加拿大人离开乌克兰国际军团</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/28/n13679472.md#1">疑染诺如病毒 加拿大召回多款海鲜产品</a></li>
 <hr>
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/onzhi266/djy/blob/master/gb/20/2/22/n11887949.md#1">美参议员：中共刻意控制新冠病毒信息流动</a></li>
-<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/4/25/n11213719.md#1" target="_blank">许茹：火灾爆炸频发京城连震 昭示奸佞当道</a></li><li><a href="https://github.com/wm2843/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank">海峡两岸的强烈对比</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/3/15/n11115255.md#1" target="_blank">美国人权报告 中国章节一值得关注的进展</a></li>
+<li><a href="https://github.com/upjkzu3674/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank">藏字石 蕴天机</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/5/27/n10430861.md#1" target="_blank">新闻奇才拒赴台湾 命丧中共劳改营</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/16/5/25/n7931386.md#1" target="_blank">生的希望</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/wm2843/djy/blob/master/gb/20/4/28/n12068456.md#1">疫情追查 传五眼联盟在调查石正丽周鹏</a></li>
-<li><a href="https://github.com/wm2843/djy/blob/master/gb/20/4/29/n12068709.md#1">【拍案惊奇】金胖走路被拍到 石正丽担忧泄毒?</a></li>
-<li><a href="https://github.com/wm2843/djy/blob/master/gb/20/4/29/n12068748.md#1">央视主播董卿抛售好莱坞欧式豪宅 图片曝光</a></li>
-<li><a href="https://github.com/wm2843/djy/blob/master/gb/20/4/29/n12070902.md#1">【疫情最前线】45万人签署调查比尔·盖茨</a></li>
-<li><a href="https://github.com/wm2843/djy/blob/master/gb/20/4/29/n12071314.md#1">【独家】中共瞒疫情 特急通知曝四大真相</a></li>
-<li><a href="https://github.com/wm2843/djy/blob/master/gb/20/4/27/n12065497.md#1">罗志祥丑闻引抵制风波 陆综近亿酬金或成泡影</a></li>
-<li><a href="https://github.com/wm2843/djy/blob/master/gb/20/4/29/n12069700.md#1">《少年Pi》里成年Pi的伊凡卡汉病逝 享年53岁</a></li>
-<li><a href="https://github.com/wm2843/djy/blob/master/gb/20/4/29/n12070504.md#1">中共再祭影视战狼条款 港台艺人或动辄遭索赔</a></li>
-<li><a href="https://github.com/wm2843/djy/blob/master/gb/20/4/28/n12068100.md#1">台湾连续三天零确诊 林志玲用逗趣谐音表心情</a></li>
-<li><a href="https://github.com/wm2843/djy/blob/master/gb/20/4/28/n12066749.md#1">TWICE心怀责任感 盼自身成长历程赋予他人希望</a></li>
-<li><a href="https://github.com/wm2843/djy/blob/master/gb/20/4/24/n12059475.md#1">【历史上的瘟疫】终结王莽新朝的大瘟疫</a></li>
-<li><a href="https://github.com/wm2843/djy/blob/master/gb/20/4/23/n12054891.md#1">【文史】崇祯展开刘伯温遗画 惊见自己结局</a></li>
-<li><a href="https://github.com/wm2843/djy/blob/master/gb/20/4/4/n12002808.md#1">仙境一来回九十年 采药人得寿五千年</a></li>
-<li><a href="https://github.com/wm2843/djy/blob/master/gb/20/4/24/n12057218.md#1">移形幻化 狐女对其情人的点悟</a></li>
-<li><a href="https://github.com/wm2843/djy/blob/master/gb/20/4/26/n12062868.md#1">神游瑰丽天国 虚云和尚尘缘未了暂返人间</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/21/12/16/n13442125.md#1">【百年真相】云南省委书记案 138万人受牵连</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/9/n13632196.md#1">【百年真相】三件大坏事 江泽民最想让人遗忘</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/24/n13671140.md#1">【未解之谜】沙中庞贝 楼兰之谜</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/16/n13649079.md#1">【人生之钥】败家子卖田地卖金玉 结局出人意料</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/2/17/n13582749.md#1">【奇术】看风也能预知命运和兴衰成败</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/9/n13634492.md#1">【思想领袖】如何对抗大科企极权主义</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/27/n13676864.md#1">【神韵原创音乐】2019 神韵交响乐《情系道缘》</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/27/n13676985.md#1">【未解之谜】高级生命控制星体和人类的对应？</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/26/n13675009.md#1">五大战区部署歼-20 中共空军意欲何为</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/24/n13669168.md#1">配F-35C等舰载机 美福特号航母已准备好战斗</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/26/n13674635.md#1">六四领袖被刺杀 FBI盯上中共间谍</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/27/n13676833.md#1">47岁林志玲产后首晒照 获赞“最美妈咪”</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/28/n13678198.md#1">威尔史密斯奥斯卡台上打人 摘影帝后致歉落泪</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/28/n13678918.md#1">大S具俊晔已在台湾完成登记 结婚纪念日选这天</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/27/n13675982.md#1">《柏捷顿家族：名门韵事》第二季影评：三角恋难题 仍可圆满解决</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/27/n13676901.md#1">林心如晒自拍秀恩爱 霍建华私下小动作引围观</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/28/n13677065.md#1">新筛查方法可查出95%一期胰腺癌</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/25/n13673047.md#1">搭机4点让旅途更安全 资深空姐：选飞机很重要</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/26/n13674013.md#1">吃奇异果不用削皮 连皮一起吃营养更加倍</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/27/n13676145.md#1">为什么新衣服在穿着之前要先洗涤？</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/19/n13657423.md#1">吃对了肌肤就漂亮 10大食材为肌肤打底</a></li>
 <hr>
 
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/wm2843/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/wm2843/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/17/3/7/n8884384.htm">2017年联邦预算提早看 会对你有什么影响？</a></p><hr>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/eizauy3553/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/eizauy3553/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/17/3/7/n8884384.htm">2017年联邦预算提早看 会对你有什么影响？</a></p><hr>
 
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="http://d1p1.ip.zn2.us/v.php?action=qrcode&url=https://github.com/wm2843/djy/blob/master/gb/17/3/7/n8884384.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/wm2843/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wm2843/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/wm2843/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/wm2843/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/wm2843/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wm2843/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/wm2843/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wm2843/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/wm2843/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wm2843/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/wm2843/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wm2843/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/wm2843/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wm2843/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/wm2843/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wm2843/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/wm2843/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wm2843/djy/master/gb/300/st1.jpg" title="关注3亿人三退"  alt="关注3亿人三退"></a><br><a href="https://github.com/wm2843/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wm2843/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/wm2843/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wm2843/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/wm2843/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wm2843/djy/master/gb/300/sj1.jpg" title="303万人举报江泽民"  alt="303万人举报江泽民"></a><br><a href="https://github.com/wm2843/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wm2843/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/wm2843/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wm2843/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/wm2843/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wm2843/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/wm2843/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wm2843/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/wm2843/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wm2843/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/wm2843/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wm2843/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/wm2843/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wm2843/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/wm2843/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wm2843/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/wm2843/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wm2843/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/wm2843/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wm2843/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/wm2843/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wm2843/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/wm2843/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wm2843/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/eizauy3553/djy/blob/master/gb/17/3/7/n8884384.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/eizauy3553/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/eizauy3553/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/eizauy3553/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
